removed photon-shaders

--- a/app/assets/stylesheets/soominpage.css.scss
+++ b/app/assets/stylesheets/soominpage.css.scss
@@ -98,7 +98,9 @@
   width:8.857142857142858em;
   height:28em;
   margin:-14.2em 0 0 -4.428571428571429em;
+  position: relative;
 }
+
 .wall-left .ft {
   -webkit-transform: translateZ(0em);
   transform:translateZ(0em);
