--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Soomins app</title>
+    <title>my room</title>
     <%= stylesheet_link_tag     "application" %>
     <%= javascript_include_tag  "application", "data-turbolinks-track" => true %>
   </head>
